# Univ_Pratice_Programming

./: README.md  main.py  pyproject.toml
Lectures/L01_01_conda_env_pratice/: environment.yml  match_py310.py  test_match.py
Lectures/L01_installation/: README.md
Lectures/L02_IDE_N_Jupyter/: main.ipynb  practice_week02_basic.ipynb
Lectures/L03_Control_Structure_n_Compund_Statement/: cli_cal.py  control_structure.ipynb  shell_module.py  shell_module1.py  sys_argv.py  test.py
Lectures/L04_argpase_cli_programming/: cli_cal.py  hw.py  test_argparse.py
Lectures/L05_Looping_and_Import/: README.md  rsp.py  rsp1.py
Lectures/L05_pandas/: main.py  notebook.ipynb
Lectures/L06_summary_of_pandas/: notebook.ipynb
Lectures/L08_pandas/: notebook.ipynb
Lectures/L09_matplotlib/: notebook.ipynb
Lectures/L10_Pillow/: notebook.ipynb
